--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "vue-chartjs": "^3.5.0",
     "vue-property-decorator": "^8.4.0",
     "vue-scrollto": "^2.17.1",
-    "vue-spinner": "^1.0.3"
+    "vue-spinner": "^1.0.3",
+    "yarn": "^1.22.4"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^2.1.0",
