--- a/.github/workflows/create-release-pr.yml
+++ b/.github/workflows/create-release-pr.yml
@@ -3,7 +3,7 @@ name: Create a release pull request
 on:
   push:
     branches:
-      - develop
+      - development
 
 jobs:
   create-release-pr:
@@ -22,7 +22,7 @@ jobs:
       env:
         GIT_PR_RELEASE_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         GIT_PR_RELEASE_BRANCH_PRODUCTION: master
-        GIT_PR_RELEASE_BRANCH_STAGING: develop
+        GIT_PR_RELEASE_BRANCH_STAGING: development
         GIT_PR_RELEASE_LABELS: release
       run: |
         gem install -N git-pr-release -v "1.2.0"
