lint が厳しすぎる

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,8 @@
     "plugin:prettier/recommended"
   ],
   "rules": {
+    "vue/singleline-html-element-content-newline": "off",
+    "vue/multiline-html-element-content-newline": "off",
     "vue/max-attributes-per-line": "off",
     "vue/html-self-closing": ["error", {
       "html": {
